--- a/requirements.txt
+++ b/requirements.txt
@@ -6,19 +6,27 @@ codacy-coverage==1.3.11
 configparser==4.0.2
 contextlib2==0.6.0.post1
 coverage==4.5.4
+entrypoints==0.3
+enum34==1.1.6
+flake8==3.7.9
 funcsigs==1.0.2
+functools32==3.2.3.post2
 idna==2.8
 importlib-metadata==0.23
+mccabe==0.6.1
 more-itertools==5.0.0
 packaging==19.2
 pathlib2==2.3.5
 pluggy==0.13.1
 py==1.8.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
 pyparsing==2.4.5
 pytest==4.6.6
 requests==2.22.0
 scandir==1.10.0
 six==1.13.0
+typing==3.7.4.1
 urllib3==1.25.7
 wcwidth==0.1.7
 zipp==0.6.0
