--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,14 +32,30 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements.txt" }}-
 
       - run:
-          name: run tests
+          name: run linter
           command: |
             . venv/bin/activate
             python -m flake8 . --exclude=.git,__pycache__,venv
+      
+      - run:
+          name: run tests
+          command: |
+            . venv/bin/activate
             coverage run --source=code/source -m pytest
+
+      - run:
+          name: check tests coverage
+          command: |
+            . venv/bin/activate
             coverage report -m
+
+      - run:
+          name: send coverage report
+          command: |
+            . venv/bin/activate
             coverage xml
             python-codacy-coverage -r coverage.xml
+
 workflows:
   version: 2
   stack:
