--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -1,7 +1,10 @@
 {
   "stages": {
     "dev": {
-      "api_gateway_stage": "api"
+      "api_gateway_stage": "api",
+      "environment_variables": {
+        "TOKEN": "673701265:AAEPejhyMoZccQfil5C3TSgr20gaaiO_V0U"
+      }
     }
   },
   "version": "2.0",
