--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -6,6 +6,13 @@
         "TOKEN": "673701265:AAEPejhyMoZccQfil5C3TSgr20gaaiO_V0U",
         "ENV": "production"
       }
+    },
+    "local": {
+      "api_gateway_stage": "api",
+      "environment_variables": {
+        "TOKEN": "12345",
+        "ENV": "test"
+      }
     }
   },
   "version": "2.0",
